[gd_scene load_steps=27 format=3 uid="uid://dcriq6dawrof6"]

[ext_resource type="Texture2D" uid="uid://cdbs0iu41vg0b" path="res://Textures/Blue Witch/Blue_witch/B_witch_idle.png" id="1_385e6"]
[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_ix2uj"]
[ext_resource type="Texture2D" uid="uid://djikpwnyl8xgn" path="res://Textures/Blue Witch/Blue_witch/B_witch_run.png" id="3_u6alt"]
[ext_resource type="PackedScene" uid="uid://b72rgxxiq3xxw" path="res://Scenes/Utility/hurt_box.tscn" id="4_gxesl"]
[ext_resource type="Texture2D" uid="uid://drfjc2tlrcgt" path="res://Textures/bar back.png" id="5_aq88m"]
[ext_resource type="Texture2D" uid="uid://bcoy4t5b18vgx" path="res://Textures/bar front.png" id="6_us30y"]
[ext_resource type="FontFile" uid="uid://bef63aem11s5s" path="res://Font/DungeonFont.ttf" id="7_bmgfq"]
[ext_resource type="PackedScene" uid="uid://6qsrok3oycqi" path="res://Scenes/Utility/button.tscn" id="8_ma00a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_54sey"]
radius = 6.0
height = 26.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mshgs"]
atlas = ExtResource("1_385e6")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dk5i"]
atlas = ExtResource("1_385e6")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfd1d"]
atlas = ExtResource("1_385e6")
region = Rect2(0, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0beok"]
atlas = ExtResource("1_385e6")
region = Rect2(0, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2l3k"]
atlas = ExtResource("1_385e6")
region = Rect2(0, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_djede"]
atlas = ExtResource("1_385e6")
region = Rect2(0, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpny2"]
atlas = ExtResource("3_u6alt")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdapm"]
atlas = ExtResource("3_u6alt")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8gev"]
atlas = ExtResource("3_u6alt")
region = Rect2(0, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yahlc"]
atlas = ExtResource("3_u6alt")
region = Rect2(0, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_46ke1"]
atlas = ExtResource("3_u6alt")
region = Rect2(0, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5trpe"]
atlas = ExtResource("3_u6alt")
region = Rect2(0, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll48o"]
atlas = ExtResource("3_u6alt")
region = Rect2(0, 288, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8r6d"]
atlas = ExtResource("3_u6alt")
region = Rect2(0, 336, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_5ierb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mshgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dk5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfd1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0beok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2l3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djede")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpny2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdapm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8gev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yahlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46ke1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5trpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll48o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8r6d")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r24vu"]
size = Vector2(14, 27)

[sub_resource type="CircleShape2D" id="CircleShape2D_kkc3y"]
radius = 377.001

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_ix2uj")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("CapsuleShape2D_54sey")

[node name="IdleTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.15
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5ierb")
animation = &"idle"
frame_progress = 0.487933

[node name="HurtBox" parent="." instance=ExtResource("4_gxesl")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-1, 3.5)
shape = SubResource("RectangleShape2D_r24vu")

[node name="Attack" type="Node2D" parent="."]

[node name="WaterBoltTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="WaterBoltAttackTimer" type="Timer" parent="Attack/WaterBoltTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="FireballTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="FireBallAttackTimer" type="Timer" parent="Attack/FireballTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="EnemyDetection" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetection"]
shape = SubResource("CircleShape2D_kkc3y")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="TextureProgressBar" parent="GUI"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.784314)
layout_mode = 0
offset_left = -27.0
offset_top = -28.0
offset_right = 25.0
offset_bottom = -21.0
value = 100.0
texture_over = ExtResource("5_aq88m")
texture_progress = ExtResource("6_us30y")
texture_progress_offset = Vector2(0.1, 2)

[node name="gameTimer" type="Label" parent="GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -19.0
offset_top = -172.0
offset_right = 21.0
offset_bottom = -148.0
theme_override_fonts/font = ExtResource("7_bmgfq")
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathPanel" type="Panel" parent="GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = -47.0
offset_top = -86.0
offset_right = 47.0
offset_bottom = 36.0

[node name="Result" type="Label" parent="GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 91.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("7_bmgfq")
text = "sample text"
horizontal_alignment = 1

[node name="Button" parent="GUI/DeathPanel" instance=ExtResource("8_ma00a")]
layout_mode = 0
offset_left = 18.0
offset_top = 94.0
offset_right = 78.0
offset_bottom = 119.0
text = "Menu"

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/WaterBoltTimer" to="." method="_on_water_bolt_timer_timeout"]
[connection signal="timeout" from="Attack/WaterBoltTimer/WaterBoltAttackTimer" to="." method="_on_water_bolt_attack_timer_timeout"]
[connection signal="timeout" from="Attack/FireballTimer" to="." method="_on_fireball_timer_timeout"]
[connection signal="timeout" from="Attack/FireballTimer/FireBallAttackTimer" to="." method="_on_fire_ball_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetection" to="." method="_on_enemy_detection_body_entered"]
[connection signal="body_exited" from="EnemyDetection" to="." method="_on_enemy_detection_body_exited"]
[connection signal="click_end" from="GUI/DeathPanel/Button" to="." method="_on_button_click_end"]

[editable path="HurtBox"]
